tests/frontend/fail/array/out_of_bounds_inv2.act
constructor of B
interface constructor()

creates

  uint x := 0
  int[3] arr := [1,2,3]

invariants

  arr[x] == 0
